--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,12 @@
 
 .center{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .justify{
     text-align: justify;
+    font-size: 20px;
 }
 
 .container{
@@ -38,13 +39,17 @@ body{
     padding: 30px;
 }
 
+.p-20{
+    padding: 10px;
+}
+
 .br-50{
     border-radius: 50%;
 }
 
 .wh-300{
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
 }
 
 .tm-social{
